hphp/hack/test/typecheck/new_expression_targ_illformed.php.exp
File "new_expression_targ_illformed.php", line 6, characters 12-15:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
File "new_expression_targ_illformed.php", line 3, characters 7-10:
Definition is here
